# FSC-Studio

./: .gitignore  LICENSE  README.md  fsc_face_database.py  fsc_face_engine.py  fsc_studio.py  fsc_studio_services.py  pyproject.toml
native/FscStudio/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
native/FscStudio/apps/FscAppQt/: main.cpp
native/FscStudio/apps/fsc_native_probe/: main.cpp
native/FscStudio/apps/fsc_vision_probe/: main.cpp
native/FscStudio/cmake/: FindOnnxRuntime.cmake
native/FscStudio/docs/: migration-checkpoints.md  python-ui-parity.md  release-1.0.0.md  third-party-notices.txt  user-guide.zh-CN.html
native/FscStudio/include/fsc/core/: Database.hpp  FileHash.hpp  IdentityGallery.hpp  Models.hpp  PathEncoding.hpp  Search.hpp  VectorMath.hpp
native/FscStudio/include/fsc/legacy/: LegacyDtb.hpp
native/FscStudio/include/fsc/mesh/: FaceMesh.hpp  MediaPipeTopology.hpp
native/FscStudio/include/fsc/vision/: FaceGeometry.hpp  Image.hpp  InsightFaceEngine.hpp  ModelPaths.hpp  OnnxRuntimeSession.hpp  RuntimeProvider.hpp
native/FscStudio/installer/: FSCStudio.iss
native/FscStudio/scripts/: bootstrap-vcpkg.ps1  build-arm64-qnn.ps1  build-installer.ps1  fetch-cuda13-runtime.ps1  fetch-onnxruntime-directml.ps1  fetch-onnxruntime-qnn.ps1  fetch-onnxruntime.ps1  fetch-qt-arm64.ps1  package-qt-portable.ps1  prepare-face-mesh-onnx.ps1  prepare-face-mesh-onnx.py  quantize-insightface-qnn.ps1  quantize-insightface-qnn.py  test-installed-release.ps1  test-native-release.ps1  test-snapdragon-release.ps1
native/FscStudio/src/core/: Database.cpp  FileHash.cpp  IdentityGallery.cpp  PathEncoding.cpp  Search.cpp  VectorMath.cpp
native/FscStudio/src/legacy/: LegacyDtb.cpp
native/FscStudio/src/mesh/: FaceMesh.cpp
native/FscStudio/src/vision/: FaceGeometry.cpp  Image.cpp  InsightFaceEngine.cpp  ModelPaths.cpp  OnnxRuntimeSession.cpp  RuntimeProvider.cpp
native/FscStudio/tests/: core_tests.cpp
packaging/: README.md  build_release.ps1  fsc_launcher.py  requirements-common.txt  runtime_probe.py
packaging/installer/: install.cmd  install.ps1
tests/: test_identity_gallery.py
tools/: train_identity_scorer.py
