[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsc-studio"
version = "0.1.0"
description = "Desktop face similarity and face database application"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "PySide6-Essentials==6.11.1",
    "insightface==1.0.1",
    "opencv-python==4.13.0.92",
    "numpy==2.5.0",
    "Pillow==12.2.0",
    "scikit-image==0.26.0",
    "onnx==1.22.0",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime==1.27.0",
]
gpu = [
    "onnxruntime-gpu==1.27.0",
]
dense-mesh = [
    "mediapipe==0.10.35",
]
training = [
    "torch>=2.4",
]

[tool.setuptools]
py-modules = [
    "fsc_studio",
    "fsc_studio_services",
    "fsc_face_engine",
    "fsc_face_database",
]
